Hotfix: fixed a bug that makes dropdown menu hidden behind homepage's cover

--- a/src/styling/_header.scss
+++ b/src/styling/_header.scss
@@ -170,6 +170,7 @@
   text-transform: none;
   top: calc(100% + 1.2rem);
   position: absolute;
+  z-index: 1000;
 
   &:not(.active) {
     display: none;
